--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "myapp",
   "version": "0.0.0",
   "description": "",
+  "engines": {
+    "node": "0.12.x",
+    "npm": "2.5.x"
+  }
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.3"
